prepped for githubPages

--- a/public/404.html
+++ b/public/404.html
@@ -11,22 +11,21 @@
 <meta name="keywords" content="" />
 
 
-<meta property="og:url" content="https://ravil-who-codes.xyz/404.html">
-  <meta property="og:site_name" content="Ravil Who Codes">
-  <meta property="og:title" content="404 Page not found">
-  <meta property="og:locale" content="en_us">
-  <meta property="og:type" content="website">
+<meta property="og:title" content="404 Page not found" />
+<meta property="og:description" content="" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://ravil-who-codes.xyz/404.html" />
 
 
 
 
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:card" content="summary"/><meta name="twitter:title" content="404 Page not found"/>
+<meta name="twitter:description" content=""/>
 
 
 
-
-  <meta itemprop="name" content="404 Page not found">
+<meta itemprop="name" content="404 Page not found">
+<meta itemprop="description" content="">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
