theme to bearblog

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <meta property="og:title" content="Ravil Who Codes" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://ravil-who-codes.xyz/" />
+<meta property="og:url" content="/" />
 
 
 
@@ -29,7 +29,7 @@
 <meta itemprop="description" content="">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://ravil-who-codes.xyz/index.xml" title="Ravil Who Codes" />
+  <link rel="alternate" type="application/rss+xml" href="/index.xml" title="Ravil Who Codes" />
   <style>
   body {
     font-family: Verdana, sans-serif;
