--- a/public/404.html
+++ b/public/404.html
@@ -14,7 +14,7 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://ravil-who-codes.xyz/404.html" />
+<meta property="og:url" content="/404.html" />
 
 
 
